--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "build": "babel ./src -d ./lib"
+        "build": "babel ./src -d ./lib",
+        "lint": "eslint ./src"
     },
     "repository": {
         "type": "git",
@@ -15,6 +16,7 @@
     "license": "ISC",
     "devDependencies": {
         "babel-cli": "^6.26.0",
-        "babel-preset-env": "^1.7.0"
+        "babel-preset-env": "^1.7.0",
+        "eslint": "^8.0.1"
     }
 }
